<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/donut"
            android:background="@drawable/background"
            android:layout_margin="20dp"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_button"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/coffee"
            android:background="@drawable/background"
            android:layout_margin="20dp"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_button"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/cart"
            android:background="@drawable/background"
            android:layout_margin="20dp"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_button"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/store"
            android:background="@drawable/background"
            android:layout_margin="20dp"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_button"
            android:textStyle="bold"
            android:textSize="16sp"
            />

    </LinearLayout>

</ScrollView>