<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Coffees">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cofffoo"
            />


        <Spinner
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selecttype"
            android:entries="@array/cofee_size"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv"
            />

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty"
                />

            <LinearLayout
                android:id="@+id/lineary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                tools:ignore="RtlHardcoded">

                <ImageButton
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgbtn1"
                    android:background="@color/purple_500"
                    android:src="@drawable/ic_baseline_remove_24"/>
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:id="@+id/counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <ImageButton
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgbtn2"
                    android:src="@drawable/ic_baseline_add_24"
                    android:background="@color/purple_500"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:textColor="@color/purple_500"
                    android:textSize="22sp" />
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollar"
                    android:textColor="@color/purple_500"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/addtocart"
            android:background="@drawable/background"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addtocart"
            android:textStyle="bold"
            />





    </LinearLayout>
</ScrollView>